pkg/objects/Revisoes_Documentais__c.object
<CustomObject>
    <description>Lista com todos os documentos sugeridos para revisão.</description>
    <fields>
        <fullName>Aprovador_Primeiro_Nivel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Aprovador nivel #1 da revisão.</description>
        <label>Aprovador Primeiro Nível</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Revisões Documentais (Aprovador Primeiro Nível)</relationshipLabel>
        <relationshipName>Revisoes_Documentais2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aprovador_Segundo_Nivel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Aprovador nível #2 da revisão.</description>
        <label>Aprovador Segundo Nível</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Revisões Documentais (Aprovador Segundo Nível)</relationshipLabel>
        <relationshipName>Revisoes_Documentais3</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descricao_da_Revisao__c</fullName>
        <description>Descrição da revisão do arquivo.</description>
        <label>Descrição da Revisão</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Documento revisado.</description>
        <label>Documento</label>
        <referenceTo>Documento__c</referenceTo>
        <relationshipLabel>Revisões Documentais</relationshipLabel>
        <relationshipName>Revisoes_Documentais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LabelPicklist__c</fullName>
        <formula>Documento__r.Name</formula>
        <label>LabelPicklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pontos__c</fullName>
        <formula>IF( TEXT(Status__c) = &quot;Aprovado&quot;, 50, IF(TEXT(Status__c) = &quot;Rejeitado&quot;, 20, 0) )</formula>
        <label>Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revisor__c</fullName>
        <description>Funcionário que sugeriu a revisão.</description>
        <label>Revisor</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Revisões Documentais</relationshipLabel>
        <relationshipName>Revisoes_Documentais</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status da aprovação da revisão.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aprovado</fullName>
                </value>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Primeiro Nível</fullName>
                </value>
                <value>
                    <fullName>Rejeitado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revisões Documentais</label>
    <nameField>
        <displayFormat>Rev-{0000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisões Documentais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>